Создано с помощью Colaboratory

--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXCbtJCWnaKv9KS/57Xtl9",
+      "authorship_tag": "ABX9TyM34moK0dj6eZ8BSjppClKR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "def train(X, Y):\n",
         "  w1 = np.random.random((3,4))\n",
         "  w2 = np.random.random((4,1))\n",
-        "  for j in range(60000):\n",
+        "  for i in range(60000):\n",
         "    S1 = 1 / (1 + np.exp(-(np.dot(X, w1))))\n",
         "    S2 = 1 / (1 + np.exp(-(np.dot(S1, w2))))\n",
         "    S2_delta = (Y - S2) * (S2 * (1 - S2))\n",
