Создано с помощью Colaboratory

--- a/position.ipynb
+++ b/position.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpsO9kA1SQWS4113t1weFG",
+      "authorship_tag": "ABX9TyOxJD01vzSlyTmMApPHzxyq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,20 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pbrNvEuw09W6",
-        "outputId": "e3b65736-d926-4bce-b7c0-f4d1c367c6d2"
+        "outputId": "53e694d7-c5cb-4f16-ea74-9e10ff7d960d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.36617349]]\n"
+            "[[0.35595811]]\n"
           ]
         }
       ],
@@ -72,8 +72,8 @@
         "  print(b)\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "  X = np.array([[1,1,0,0,0,0,0,0,0,0], [0,0,1,1,0,0,0,0,0,0], [0,0,0,0,1,1,0,0,0,0], [0,0,0,0,0,0,1,1,0,0]])\n",
-        "  Y = np.array([[0.1, 0.2, 0.3, 0.4]]).T\n",
+        "  X = np.array([[1,1,0,0,0,0,0,0,0,0], [0,0,1,1,0,0,0,0,0,0], [0,0,0,0,1,1,0,0,0,0], [0,0,0,0,0,0,1,1,0,0], [0,0,0,0,0,0,0,0,1,1]])\n",
+        "  Y = np.array([[0.1, 0.2, 0.3, 0.4, 0.5]]).T\n",
         "  test = np.array([[0,0,0,0,0,1,1,0,0,0]])\n",
         "  main()"
       ]
