Создано с помощью Colaboratory

--- a/combinations_of_number.ipynb
+++ b/combinations_of_number.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6u/NF0awYILZTZW+oOh/b",
+      "authorship_tag": "ABX9TyPjxxUoVSETOF/Ro9vYap6q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,21 +28,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": 194,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1ltkGRrUOdjJ",
-        "outputId": "8c7c0dfb-7109-4d23-e29d-46dd5afd717c"
+        "outputId": "c03e25ad-16ec-42d8-cc34-2c7b26e83609"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[1, 4, 3, 2], [1, 3, 4, 2], [1, 2, 3, 4], [1, 2, 4, 3], [1, 3, 2, 4], [1, 4, 2, 3]]\n",
-            "[[2, 1, 3, 4], [2, 4, 1, 3], [2, 3, 4, 1], [2, 1, 4, 3], [2, 4, 3, 1], [2, 3, 1, 4]]\n"
+            "[[1, 3, 2, 4], [1, 4, 2, 3], [1, 2, 4, 3], [1, 2, 3, 4], [1, 4, 3, 2], [1, 3, 4, 2]]\n",
+            "[[2, 1, 4, 3], [2, 4, 3, 1], [2, 3, 4, 1], [2, 3, 1, 4], [2, 1, 3, 4], [2, 4, 1, 3]]\n",
+            "6\n"
           ]
         }
       ],
@@ -51,13 +52,22 @@
         "\n",
         "\n",
         "number = [1,2,3,4]\n",
-        "index = [0,1]\n",
         "\n",
+        "def indexes_of_i():\n",
+        "  indexes = []\n",
+        "  i = 0;\n",
+        "  while i < len(number)/2:  # len(number) = 4 \n",
+        "    indexes.append(i)\n",
+        "    i+=1\n",
+        "  return indexes\n",
+        "\n",
+        "index = indexes_of_i()\n",
         "\n",
         "def combination_starts_with_i(iteration):\n",
+        "  global big_array\n",
         "  big_array = []\n",
         "  i = 0\n",
-        "  while i < len(number) + 2:\n",
+        "  while i < len(number) + 2:    # len(number) = 4 \n",
         "    array = []\n",
         "    array.append(number[iteration])\n",
         "    j = 1\n",
@@ -73,7 +83,8 @@
         "  print(big_array)\n",
         "\n",
         "for iteration in index:\n",
-        "  combination_starts_with_i(iteration)"
+        "  combination_starts_with_i(iteration)\n",
+        "print(len(big_array))"
       ]
     }
   ]
