Создано с помощью Colaboratory

--- a/combinations_of_number.ipynb
+++ b/combinations_of_number.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjxxUoVSETOF/Ro9vYap6q",
+      "authorship_tag": "ABX9TyN4WATWWXPBOOcDu25vlP2/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,46 +28,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 194,
+      "execution_count": 257,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1ltkGRrUOdjJ",
-        "outputId": "c03e25ad-16ec-42d8-cc34-2c7b26e83609"
+        "outputId": "18dae149-589a-446e-c270-436d7ccd94f4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[1, 3, 2, 4], [1, 4, 2, 3], [1, 2, 4, 3], [1, 2, 3, 4], [1, 4, 3, 2], [1, 3, 4, 2]]\n",
-            "[[2, 1, 4, 3], [2, 4, 3, 1], [2, 3, 4, 1], [2, 3, 1, 4], [2, 1, 3, 4], [2, 4, 1, 3]]\n",
-            "6\n"
+            "[[1, 2, 4, 3], [1, 4, 3, 2], [1, 3, 4, 2], [1, 2, 3, 4], [1, 4, 2, 3], [1, 3, 2, 4]]\n",
+            "[[2, 3, 4, 1], [2, 4, 1, 3], [2, 1, 4, 3], [2, 1, 3, 4], [2, 4, 3, 1], [2, 3, 1, 4]]\n",
+            "6\n",
+            "[[[1, 2, 4, 3], [1, 4, 3, 2], [1, 3, 4, 2], [1, 2, 3, 4], [1, 4, 2, 3], [1, 3, 2, 4]], [[2, 3, 4, 1], [2, 4, 1, 3], [2, 1, 4, 3], [2, 1, 3, 4], [2, 4, 3, 1], [2, 3, 1, 4]]]\n"
           ]
         }
       ],
       "source": [
         "import random\n",
+        "import math\n",
+        "import numpy as np\n",
         "\n",
         "\n",
         "number = [1,2,3,4]\n",
+        "factorial = math.factorial(len(number) - 1)\n",
         "\n",
         "def indexes_of_i():\n",
         "  indexes = []\n",
         "  i = 0;\n",
-        "  while i < len(number)/2:  # len(number) = 4 \n",
+        "  while i < len(number)/2: \n",
         "    indexes.append(i)\n",
         "    i+=1\n",
         "  return indexes\n",
         "\n",
         "index = indexes_of_i()\n",
+        "biggest_array = []\n",
         "\n",
         "def combination_starts_with_i(iteration):\n",
         "  global big_array\n",
         "  big_array = []\n",
         "  i = 0\n",
-        "  while i < len(number) + 2:    # len(number) = 4 \n",
+        "  while i < factorial: \n",
         "    array = []\n",
         "    array.append(number[iteration])\n",
         "    j = 1\n",
@@ -80,11 +85,14 @@
         "    if array not in big_array:\n",
         "      big_array.append(array)\n",
         "      i+=1\n",
+        "  biggest_array.append(big_array)\n",
         "  print(big_array)\n",
+        "\n",
         "\n",
         "for iteration in index:\n",
         "  combination_starts_with_i(iteration)\n",
-        "print(len(big_array))"
+        "print(len(big_array))\n",
+        "print(biggest_array)"
       ]
     }
   ]
