--- a/diagonal_matrix.ipynb
+++ b/diagonal_matrix.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOC9IgxdoNt7r3S73pQg4H6",
+      "authorship_tag": "ABX9TyMUnTlMuQQxrhetg5QLNh+J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,40 +28,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 74,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IcilloxXCIF9",
-        "outputId": "184c10da-9728-4026-ef5a-a57c77821bcf"
+        "outputId": "45eac87d-dd50-443a-8bb4-c5e24ba103b9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[1, 2, 4, 7, 11, 16, 22, 29, 37, 46]\n",
-            "[3, 5, 8, 12, 17, 23, 30, 38, 47, 56]\n",
-            "[6, 9, 13, 18, 24, 31, 39, 48, 57, 65]\n",
-            "[10, 14, 19, 25, 32, 40, 49, 58, 66, 73]\n",
-            "[15, 20, 26, 33, 41, 50, 59, 67, 74, 80]\n",
-            "[21, 27, 34, 42, 51, 60, 68, 75, 81, 86]\n",
-            "[28, 35, 43, 52, 61, 69, 76, 82, 87, 91]\n",
-            "[36, 44, 53, 62, 70, 77, 83, 88, 92, 95]\n",
-            "[45, 54, 63, 71, 78, 84, 89, 93, 96, 98]\n",
-            "[55, 64, 72, 79, 85, 90, 94, 97, 99, 100]\n"
+            "[1, 2, 4, 7, 11, 16, 21, 26, 31, 36, 41, 46, 51, 56, 61]\n",
+            "[3, 5, 8, 12, 17, 22, 27, 32, 37, 42, 47, 52, 57, 62, 66]\n",
+            "[6, 9, 13, 18, 23, 28, 33, 38, 43, 48, 53, 58, 63, 67, 70]\n",
+            "[10, 14, 19, 24, 29, 34, 39, 44, 49, 54, 59, 64, 68, 71, 73]\n",
+            "[15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 69, 72, 74, 75]\n"
           ]
         }
       ],
       "source": [
-        "N = 10\n",
-        "matrix = [[0 for x in range(N)] for y in range(N)] \n",
+        "N = 15\n",
+        "M = 5\n",
+        "matrix = [[0 for x in range(N)] for y in range(M)] \n",
         "num = 1\n",
         "k = -N\n",
-        "while k < N:\n",
+        "while k < M:\n",
         "  i = 0\n",
-        "  while i < N:\n",
+        "  while i < M:\n",
         "    j = 0\n",
         "    while j < N:\n",
         "      if j == N - i + k: \n",
