Создано с помощью Colaboratory

--- a/multiclass.ipynb
+++ b/multiclass.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZqHVFpgXbTrFN4aTiyzFD",
+      "authorship_tag": "ABX9TyOCKebvGZ6m3kbkIw6MdPRU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "  X = np.array([[0.9,0.1],[0.1,0.5],[0.5,0.1],[0.4,0.9]])\n",
-        "  Y = np.array([[1,0,0,0],[0,1,0,0],[0,0,1,0],[0,0,0,1]])  # regression needs transposition .T\n",
+        "  Y = np.array([[1,0,0,0],[0,1,0,0],[0,0,1,0],[0,0,0,1]])  # regression needs .T\n",
         "  test = np.array([[0.5,0.1]])\n",
         "  main()"
       ]
