Создано с помощью Colaboratory

--- a/fibonacci.ipynb
+++ b/fibonacci.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPadbXtFP1VMkIeVvLOIrnp",
+      "authorship_tag": "ABX9TyMAjrZzxG0K2V88s9KWop50",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,20 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3QxmeVJwuyxi",
-        "outputId": "50121a30-4edb-48d0-d11d-305cd997dc06"
+        "outputId": "bbf9d873-f2b6-48fe-b45b-afd14217ce0c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "5\n"
+            "[1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
           ]
         }
       ],
@@ -51,7 +51,8 @@
         "        return 1\n",
         "    return fibonacci(n - 1) + fibonacci(n - 2)\n",
         "\n",
-        "print(fibonacci(5))"
+        "list = [fibonacci(i) for i in range(1,10)]\n",
+        "print(list)"
       ]
     }
   ]
