Создано с помощью Colaboratory

--- a/weather.ipynb
+++ b/weather.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbX1+xxb3e9a/lkOy3ngAr",
+      "authorship_tag": "ABX9TyM5xNMpu6afB3V85fnS2zeh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3QxmeVJwuyxi",
-        "outputId": "f0c659f1-f6b6-40d9-a444-dd6f8efd8e2f"
+        "outputId": "fc6654f3-9bc3-48e3-eb68-4786f8c2c9d6"
       },
       "outputs": [
         {
@@ -46,7 +46,7 @@
         }
       ],
       "source": [
-        "import requests, json\n",
+        "import requests\n",
         "latitude = 44.0486\n",
         "longtitude = 43.0594\n",
         "key = \"859babe04b3085ce5d5fc2539f283d2b\"\n",
