Создано с помощью Colaboratory

--- a/pygame.ipynb
+++ b/pygame.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNq5q9uE7kYXP92JkLnrbQM",
+      "authorship_tag": "ABX9TyNpybB74isTrhHpBh0MlfjT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "wesqesVyV6mn",
-        "outputId": "618289da-7217-4226-baf6-44a7b995387a",
+        "outputId": "f85df8ba-29b0-4503-f0f8-03d8faa51748",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 283
+          "height": 281
         }
       },
       "outputs": [
@@ -53,7 +53,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-bf062389a1bc>\u001b[0m in \u001b[0;36m<cell line: 17>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# создание окна\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mscreen\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_mode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mWINDOW_WIDTH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mWINDOW_HEIGHT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_caption\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Перемещение объекта'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-1-c760f5593e57>\u001b[0m in \u001b[0;36m<cell line: 18>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;31m# создание окна\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mscreen\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_mode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mWINDOW_WIDTH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mWINDOW_HEIGHT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_caption\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Перемещение объекта'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31merror\u001b[0m: No available video device"
           ]
         }
@@ -73,14 +73,15 @@
         "WHITE = (255, 255, 255)\n",
         "RED = (255, 0, 0)\n",
         "GREEN = (0, 255, 0)\n",
+        "BLUE = (0, 0, 255)\n",
         "\n",
         "# создание окна\n",
         "screen = pygame.display.set_mode((WINDOW_WIDTH, WINDOW_HEIGHT))\n",
         "pygame.display.set_caption('Перемещение объекта')\n",
         "\n",
         "# красный квадрат\n",
-        "x = 50\n",
-        "y = 50\n",
+        "x = 200\n",
+        "y = 250\n",
         "height = 50\n",
         "width = 50\n",
         "\n",
@@ -94,10 +95,20 @@
         "y_max = WINDOW_HEIGHT - 30\n",
         "\n",
         "# зеленый квадрат\n",
-        "obstacle_x = 300\n",
+        "obstacle_x = 400\n",
         "obstacle_y = 200\n",
         "obstacle_height = 200\n",
         "obstacle_width = 200\n",
+        "\n",
+        "# синий луч 1\n",
+        "ray_x = x + width/2\n",
+        "ray_y = y + height/2\n",
+        "ray_length = x_min\n",
+        "\n",
+        "# синий луч 2\n",
+        "ray_x_horizontal = x + width/2\n",
+        "ray_y_horizontal = y + height/2\n",
+        "ray_length_horizontal = x_max\n",
         "\n",
         "# игровой цикл\n",
         "running = True\n",
@@ -112,29 +123,47 @@
         "    # перемещение объекта в зависимости от нажатых клавиш внутри рамки\n",
         "    if keys[pygame.K_LEFT] and x > x_min:\n",
         "        x -= speed\n",
+        "        ray_x -= speed\n",
+        "        ray_x_horizontal -= speed\n",
         "    if keys[pygame.K_RIGHT] and x < x_max - width:\n",
         "        x += speed\n",
+        "        ray_x += speed\n",
+        "        ray_x_horizontal += speed\n",
         "    if keys[pygame.K_UP] and y > y_min:\n",
         "        y -= speed\n",
+        "        ray_y -= speed\n",
+        "        ray_y_horizontal -= speed\n",
         "    if keys[pygame.K_DOWN] and y < y_max - height:\n",
         "        y += speed\n",
+        "        ray_y += speed\n",
+        "        ray_y_horizontal += speed\n",
         "\n",
         "    # проверка на столкновение с зеленым квадратом\n",
         "    if x + width > obstacle_x and x < obstacle_x + obstacle_width and y + height > obstacle_y and y < obstacle_y + obstacle_height:\n",
         "        if keys[pygame.K_LEFT]:\n",
         "            x = obstacle_x + obstacle_width\n",
+        "            ray_x = obstacle_x + obstacle_width + width/2\n",
+        "            ray_x_horizontal = obstacle_x + obstacle_width + width/2\n",
         "        elif keys[pygame.K_RIGHT]:\n",
         "            x = obstacle_x - width\n",
+        "            ray_x = obstacle_x - width/2\n",
+        "            ray_x_horizontal = obstacle_x - width/2\n",
         "        elif keys[pygame.K_UP]:\n",
         "            y = obstacle_y + obstacle_height\n",
+        "            ray_y = obstacle_y + obstacle_height + height/2\n",
+        "            ray_y_horizontal = obstacle_y + obstacle_height + height/2\n",
         "        elif keys[pygame.K_DOWN]:\n",
         "            y = obstacle_y - height\n",
+        "            ray_y = obstacle_y - height/2\n",
+        "            ray_y_horizontal = obstacle_y - height/2\n",
         "\n",
         "    # отрисовка объектов\n",
         "    screen.fill(WHITE)\n",
         "    pygame.draw.rect(screen, BLACK, (x_min, y_min, x_max - x_min, y_max - y_min), 2)\n",
         "    pygame.draw.rect(screen, GREEN, (obstacle_x, obstacle_y, obstacle_width, obstacle_height))\n",
         "    pygame.draw.rect(screen, RED, (x, y, width, height))\n",
+        "    pygame.draw.line(screen, BLUE, (ray_x, ray_y), (ray_x, ray_length), 2)\n",
+        "    pygame.draw.line(screen, BLUE, (ray_x_horizontal, ray_y_horizontal), (ray_length_horizontal, ray_y_horizontal), 2)\n",
         "    pygame.display.update()\n",
         "\n",
         "# завершение работы Pygame\n",
