Создано с помощью Colaboratory

--- a/dictionary.ipynb
+++ b/dictionary.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxlN6qNDt3x5SH7GLZKDMj",
+      "authorship_tag": "ABX9TyO8DcAD2FTRMsUFkCu4kxVN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OV4VpfwEBbNL",
-        "outputId": "a30dad3f-9753-4705-d9f1-f9d6d7fba3d6"
+        "outputId": "64cf98af-0bd3-404c-ae0b-1c5cd0fda611"
       },
       "outputs": [
         {
@@ -46,7 +46,8 @@
             "dict_keys(['Имя', 'Фамилия'])\n",
             "dict_values(['Вася', 'Иванов'])\n",
             "Имя : Вася\n",
-            "Фамилия : Иванов\n"
+            "Фамилия : Иванов\n",
+            "{'a': [1, 2, 3], 'b': [4, 5, 6]}\n"
           ]
         }
       ],
@@ -60,7 +61,14 @@
         "print(dictionary.keys())\n",
         "print(dictionary.values())\n",
         "for key, value in dictionary.items():\n",
-        "    print(f\"{key} : {value}\")"
+        "    print(f\"{key} : {value}\")\n",
+        "\n",
+        "list1 = [1, 2, 3]\n",
+        "list2 = [4, 5, 6]\n",
+        "d = {'a': [], 'b': []}\n",
+        "d['a'] = list1\n",
+        "d['b'] = list2\n",
+        "print(d)"
       ]
     }
   ]
