Создано с помощью Colaboratory

--- a/dictionary.ipynb
+++ b/dictionary.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8DcAD2FTRMsUFkCu4kxVN",
+      "authorship_tag": "ABX9TyPfh6wBrdQ0w9Xk1u4zzyw9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OV4VpfwEBbNL",
-        "outputId": "64cf98af-0bd3-404c-ae0b-1c5cd0fda611"
+        "outputId": "8ee50925-2def-4c36-e0a2-e2d6bf42eed7"
       },
       "outputs": [
         {
@@ -47,7 +47,8 @@
             "dict_values(['Вася', 'Иванов'])\n",
             "Имя : Вася\n",
             "Фамилия : Иванов\n",
-            "{'a': [1, 2, 3], 'b': [4, 5, 6]}\n"
+            "{'a': [1, 2, 3], 'b': [4, 5, 6]}\n",
+            "{'Фрукты': 22, 'Пустая': 14, 'Корица': 4, 'Сыр': 21, 'Вишня': 10}\n"
           ]
         }
       ],
@@ -68,7 +69,16 @@
         "d = {'a': [], 'b': []}\n",
         "d['a'] = list1\n",
         "d['b'] = list2\n",
-        "print(d)"
+        "print(d)\n",
+        "\n",
+        "scones = {\n",
+        "    \"Фрукты\": 22,\n",
+        "    \"Пустая\": 14,\n",
+        "    \"Корица\": 4,\n",
+        "    \"Сыр\": 21\n",
+        "}\n",
+        "scones[\"Вишня\"] = 10\n",
+        "print(scones)"
       ]
     }
   ]
