Создано с помощью Colaboratory

--- a/recursion.ipynb
+++ b/recursion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaCudAI90qqpJmVDh4iiGe",
+      "authorship_tag": "ABX9TyMdhz3/P7XwWUo0lLkBrubp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,24 +28,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GfLOfyOmpC1p",
-        "outputId": "5a0a0abd-a0fb-41d9-c322-3df17c21824d"
+        "outputId": "d17e3009-83b8-4d8b-d4db-86313148bfdd"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "30"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 23
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10000\n",
+            "5000.0\n",
+            "2500.0\n",
+            "1250.0\n",
+            "625.0\n",
+            "312.5\n",
+            "156.25\n",
+            "78.125\n",
+            "39.0625\n",
+            "19.53125\n",
+            "9.765625\n",
+            "4.8828125\n",
+            "2.44140625\n",
+            "1.220703125\n",
+            "0.6103515625\n"
+          ]
         }
       ],
       "source": [
@@ -53,7 +64,15 @@
         "  if m == n:\n",
         "    return m\n",
         "  return m + sum(m + 1, n)\n",
-        "sum(4, 8)"
+        "sum(4, 8)\n",
+        "\n",
+        "def recursion(a):\n",
+        "  print(a)\n",
+        "  if a < 1: \n",
+        "    return a\n",
+        "  recursion(a/2)\n",
+        "\n",
+        "recursion(10000)"
       ]
     }
   ]
