--- a/recursion.ipynb
+++ b/recursion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdhz3/P7XwWUo0lLkBrubp",
+      "authorship_tag": "ABX9TyNA2b4Q0rwJ7NwK/TLvTqcT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,19 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GfLOfyOmpC1p",
-        "outputId": "d17e3009-83b8-4d8b-d4db-86313148bfdd"
+        "outputId": "7dc8299a-0198-40aa-ec1e-003aae6e7f0a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Сумма чисел от 1 до 10 равна 55\n",
             "10000\n",
             "5000.0\n",
             "2500.0\n",
@@ -64,7 +65,7 @@
         "  if m == n:\n",
         "    return m\n",
         "  return m + sum(m + 1, n)\n",
-        "sum(4, 8)\n",
+        "print(f\"Сумма чисел от 1 до 10 равна {sum(1, 10)}\")\n",
         "\n",
         "def recursion(a):\n",
         "  print(a)\n",
