Создано с помощью Colaboratory

--- a/keras.ipynb
+++ b/keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMvbSFaWKpIIA7LsIVNEbD6",
+      "authorship_tag": "ABX9TyPmU9gcYGsObLTfaZYZ3SGi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,31 +28,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tChLSHj4d1og",
-        "outputId": "ae6517d9-083e-4e3a-9cce-fa329d142171"
+        "outputId": "ca06ef6e-8127-466a-821e-dfba525c8590"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10/10 - 2s - loss: 0.7339 - accuracy: 0.0000e+00 - 2s/epoch - 185ms/step\n",
-            "1/1 [==============================] - 0s 415ms/step\n",
-            "[[0.55881   ]\n",
-            " [0.55103976]\n",
-            " [0.556046  ]\n",
-            " [0.5465341 ]\n",
-            " [0.5406999 ]\n",
-            " [0.53221387]\n",
-            " [0.5329684 ]\n",
-            " [0.53724366]\n",
-            " [0.52682716]\n",
-            " [0.5456098 ]]\n"
+            "100/100 - 3s - loss: 0.7075 - accuracy: 0.1600 - 3s/epoch - 30ms/step\n",
+            "4/4 [==============================] - 0s 4ms/step\n"
           ]
         }
       ],
@@ -61,23 +51,18 @@
         "from keras.models import Sequential\n",
         "from keras.layers import LSTM, Dense\n",
         "\n",
-        "# Генерируем случайный входной массив с формой (образцы, временные отметки, признаки)\n",
-        "X = np.random.random((10, 5, 2))\n",
+        "time_series = 100\n",
+        "lstm_modules = 4\n",
         "\n",
-        "# Создаем модель LSTM\n",
+        "X = np.random.random((time_series, 10, 10))   # карта 10x10\n",
+        "Y = np.random.random((time_series, 4))        # предсказание перемещения\n",
+        "\n",
         "model = Sequential()\n",
-        "model.add(LSTM(4, input_shape=(5, 2)))\n",
-        "model.add(Dense(1, activation='sigmoid'))\n",
-        "\n",
-        "# Компилируем модель\n",
+        "model.add(LSTM(lstm_modules, input_shape=(10, 10)))\n",
+        "model.add(Dense(4, activation='sigmoid'))\n",
         "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-        "\n",
-        "# Обучаем модель на входных данных X\n",
-        "model.fit(X, np.random.random((10, 1)), epochs=1, batch_size=1, verbose=2)\n",
-        "\n",
-        "# Получаем выходные данные модели и выводим их на экран\n",
-        "output = model.predict(X)\n",
-        "print(output)"
+        "model.fit(X, Y, epochs=1, batch_size=1, verbose=2)\n",
+        "output = model.predict(X)"
       ]
     }
   ]
