Создано с помощью Colaboratory

--- a/audio.ipynb
+++ b/audio.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUgSGD2GgfkXiaEY+SzXqJ",
+      "authorship_tag": "ABX9TyN0vU1qgd6Rbc9TEFzCcmdX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,12 +40,12 @@
         "def make_sound(freq, delay):\n",
         "    sampleRate = 44100\n",
         "    # sampling frequency, size, channels, buffer\n",
-        "    pygame.mixer.init(sampleRate, 16, 2, 512) \n",
+        "    pygame.mixer.init(sampleRate, 16, 2, 1024) \n",
         "    mono = numpy.array([4096 * numpy.sin(2.0 * numpy.pi * freq * x / sampleRate) for x in range(0, sampleRate)]).astype(numpy.int16)\n",
         "    stereo = numpy.c_[mono, mono]\n",
         "    sound = pygame.sndarray.make_sound(stereo)\n",
+        "    sound.set_volume(0.01)\n",
         "    sound.play()\n",
-        "    sound.fadeout(1000)\n",
         "    pygame.time.delay(delay)\n",
         "    sound.stop()\n",
         "\n",
